# nb-sim

./: Cargo.toml  README.md  Trunk.toml  cmd.dhall  flake.nix  index.html  shell.nix
.github/workflows/: rust.yml
crates/reuron/: Cargo.toml  README.md
crates/reuron-commands/: Cargo.toml
crates/reuron-commands/src/: lib.rs
crates/reuron/sample_data/: H17.03.010.11.13.01_656411100_m.swc  swc_neuron.json
crates/reuron/src/: constants.rs  dimension.rs  gui.rs  lib.rs  pan_orbit_camera.rs  plugin.rs  serialize.rs  stimulator.rs
crates/reuron/src/gui/: load.rs
crates/reuron/src/integrations/: grace.rs  mod.rs  swc_file.rs
crates/reuron/src/neuron/: channel.rs  membrane.rs  mod.rs  network.rs  segment.rs  solution.rs  synapse.rs
crates/toy-runner/: Cargo.toml
crates/toy-runner/src/: main.rs  ring_buffer.rs
data/: channels.ffg  defaultSwcNeuron.ffg  membranes.ffg  neurons.ffg  out.txt  sample_neuron.ffg  scene.ffg
sample_data/: mnist-12-int8.onnx  sample_scene.json  swc_neuron.json
src/: constants.rs  dimension.rs  gui.rs  lib.rs  onnx.rs  pan_orbit_camera.rs  plugin.rs  selection.rs  serialize.rs  start.rs  stimulator.rs
src/gui/: external_trigger.rs  load.rs  oscilloscope.rs
src/integrations/: grace.rs  mod.rs  swc_file.rs
src/neuron/: channel.rs  membrane.rs  mod.rs  network.rs  segment.rs  solution.rs  synapse.rs
src/onnx/: plugin.rs
