[package]
edition = "2021"
name = "reuron"
version = "0.1.0"
resolver = "2"

[dependencies]
wasm-bindgen = "0.2.86"
csv = "^1.1.6"
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_egui = "^0.20.2"
bevy_mod_picking = "^0.13"
crossbeam = "^0.8"
ehttp = "^0.2.0"
querystring = "^1.1"
serde = { version = "1.0.158", features=["serde_derive"]}
serde_json = "1.0.94"
uuid = {version = "1.3.0", features =["wasm-bindgen", "v3","v4","serde", "js"]}
web-sys = { version = "^0.3", features=["Location", "Window"] }
wgpu = { version = "^0.15", features=["webgl"]}

[[bin]]
name = "bevy"
path = "src/bin/bevy.rs"

[build-dependencies]
vergen = { version = "^8.1", features = [ "build", "git", "gitcl" ] }

[patch.crates-io]
bevy = { git = 'https://github.com/bevyengine/bevy.git' }
bevy_mod_picking = { git = 'https://github.com/imalsogreg/bevy_mod_picking', branch = 'bevy-0.11-compatibility' }
bevy_mod_raycast = { git = 'https://github.com/coreh/bevy_mod_raycast', branch = 'bevy-0.11-compatibility' }
bevy_egui = { git = 'https://github.com/imalsogreg/bevy_egui', branch = 'bevy-main' }
