[package]
edition = "2021"
name = "nb-sim"
version = "0.1.0"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "bevy"
path = "src/bin/bevy.rs"

[dependencies]
once_cell = "^1.18"
wasm-bindgen = "0.2.86"
csv = "^1.1.6"
bevy = "^0.13.2"
bevy_egui = "^0.27"
bevy_mod_picking = "^0.18.2"
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
ehttp = "^0.5"
querystring = "^1.1"
serde = { version = "1.0.158", features=["serde_derive"]}
serde_json = "1.0.94"
uuid = {version = "1.3.0", features =["wasm-bindgen", "v3","v4","serde", "js"]}
web-sys = { version = "^0.3", features=["Location", "Window", "Document", "Element", "HtmlTextAreaElement"] }
wgpu = { version = "^0.15", features=["webgl"]}
bevy_panorbit_camera = { version = "0.18.0", features = ["bevy_egui"] }
egui_plot = "0.27.2"


[build-dependencies]
vergen = { version = "^8.1", features = [ "build", "git", "gitcl" ] }
